--- a/etiquetas/tiempo/index.html
+++ b/etiquetas/tiempo/index.html
@@ -428,29 +428,6 @@
       </div>
     </section>
   
-    <section class="section rad-animation-group pb-0" id="n_municipios">
-      <div class="container rad-fade-down">
-        <div class="row d-flex flex-column-reverse flex-md-row">
-          <div class="about__profile-picture col-12 col-md-6">
-            <img
-              class="lozad img-responsive image-right-overflow"
-              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/n_municipios.png"
-              data-srcset="https://coronamex.github.io/imagenes/n_municipios.png 1x, https://coronamex.github.io/imagenes/n_municipios@2x.png 2x"
-              alt="Número de municipios que reportaron casos de COVID-19 en los siete días previos en el eje vertical, por fecha de inicio de síntomas en el eje horizontal."
-            />
-          </div>
-          <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>Municipios con transmisión activa</h3>
-            <p class="lead">
-              <p>Conforme la epidemia avanza en el país, el número de municipios con transmisión activa crece. Esta gráfica muestra el número de municipios en el país que han reportado casos positivos de COVID-19 que mostraron síntomas en la semana previa. Estos son municipios donde probablemente hay transmisión activa.</p> <p>La epidemia se ha expandido por el país desde principios de marzo y el número de municipios recientes sigue aumentando. Eventualmente, cuando la epidemia se apacigüe, debemos ver como el número de municipios con transmisión activa decrece.</p>
-            </p>
-              
-          </div>
-        </div>
-      </div>
-    </section>
-  
     <section class="section rad-animation-group pb-0" id="inicio_comunitarios">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
@@ -474,22 +451,22 @@
       </div>
     </section>
   
-    <section class="section rad-animation-group pb-0" id="letalidad">
+    <section class="section rad-animation-group pb-0" id="letalidad_mexico">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
           <div class="about__profile-picture col-12 col-md-6">
             <img
               class="lozad img-responsive image-right-overflow"
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
-              data-src="https://coronamex.github.io/imagenes/letalidad_diagrama.png"
-              data-srcset="https://coronamex.github.io/imagenes/letalidad_diagrama.png 1x, https://coronamex.github.io/imagenes/letalidad_diagrama@2x.png 2x"
-              alt=""
+              data-src="https://coronamex.github.io/imagenes/letalidad_mexico.png"
+              data-srcset="https://coronamex.github.io/imagenes/letalidad_mexico.png 1x, https://coronamex.github.io/imagenes/letalidad_mexico@2x.png 2x"
+              alt="Letalidad por COVID-19 en México a lo largo del tiempo. Se muestran estimadores de la letalide instantánea y con un retraso de nueve días."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>¿Cómo se interpreta la letalidad?</h3>
+            <h3>Letalidad en México</h3>
             <p class="lead">
-              <p>La letalidad es la proporción de gente enferma que termina falleciendo. Es un parámetro importante pero es casi imposible medirlo en tiempo real. Esto se ilustra con una simulación. Si pudiéramos medir todos los nuevos casos instantáneamente, terminaríamos subestimando la verdadera letalidad. Por otro lado, el retraso entre la aparición de un caso y su detección provoca que sobrestimemos la verdadera letalidad.</p> <p>En el mundo real, el cálculo es todavía más complicado porque no detectamos todos los casos, y porque variaciones regionales causan diferentes tipos de error.</p> <p>La simulación muestra que es posible estimar la letalidad de manera retrospectiva, una vez que no hay nuevos casos. Usando este principio, podemos usar la letalidad del COVID-19 en China (4.2%) y Corea del Sur (1.1%) para darnos una idea de lo que podemos esperar. La diferencia de 3% es el efecto entre la eficiencia de las medidas de mitigación. <strong>Quédate en Casa</strong>.</p>
+              <p>La letalidad es <a href="../../muertes#letalidad">difícil de interpretar</a>. En México podemos calcularla como el número de fallecimientos por cada cien casos (letalidad instantánea), o el número de fallecimientos por cada cien casos <a href="../../clinicos#tiempo_muerte">nueve días antes</a> (letalidad con retraso).</p> <p>La gráfica muestra que estos dos estimadores dan resultados diferentes, lo que indica que ninguno de los dos es confiable en este momento, y por lo tanto no sabemos la letalidad verdadera del COVID-19 en México.</p>
             </p>
               
           </div>
