--- a/etiquetas/modelo/index.html
+++ b/etiquetas/modelo/index.html
@@ -322,7 +322,7 @@
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
               data-src="https://coronamex.github.io/imagenes/letalidad_diagrama.png"
               data-srcset="https://coronamex.github.io/imagenes/letalidad_diagrama.png 1x, https://coronamex.github.io/imagenes/letalidad_diagrama@2x.png 2x"
-              alt=""
+              alt="Diagrama que ilustra las dificultades de estimar la letalidad durante una epidemia. La letalidad verdadera y el número de nuevos casos infecciosos y muertes acumulados de una simulación con un modelo SEIRD. Dos estimadores de letalidad (instantánea y con retraso) se muestran. Ninguno hace un buen trabajo durante la epidemia pero convergen una vez que el pico epidémico ha pasado."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
