--- a/muertes/index.html
+++ b/muertes/index.html
@@ -322,13 +322,36 @@
               src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
               data-src="https://coronamex.github.io/imagenes/letalidad_diagrama.png"
               data-srcset="https://coronamex.github.io/imagenes/letalidad_diagrama.png 1x, https://coronamex.github.io/imagenes/letalidad_diagrama@2x.png 2x"
-              alt=""
+              alt="Diagrama que ilustra las dificultades de estimar la letalidad durante una epidemia. La letalidad verdadera y el número de nuevos casos infecciosos y muertes acumulados de una simulación con un modelo SEIRD. Dos estimadores de letalidad (instantánea y con retraso) se muestran. Ninguno hace un buen trabajo durante la epidemia pero convergen una vez que el pico epidémico ha pasado."
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>¿Cómo se interpreta la letalidad?</h3>
             <p class="lead">
               <p>La letalidad es la proporción de gente enferma que termina falleciendo. Es un parámetro importante pero es casi imposible medirlo en tiempo real. Esto se ilustra con una simulación. Si pudiéramos medir todos los nuevos casos instantáneamente, terminaríamos subestimando la verdadera letalidad. Por otro lado, el retraso entre la aparición de un caso y su detección provoca que sobrestimemos la verdadera letalidad.</p> <p>En el mundo real, el cálculo es todavía más complicado porque no detectamos todos los casos, y porque variaciones regionales causan diferentes tipos de error.</p> <p>La simulación muestra que es posible estimar la letalidad de manera retrospectiva, una vez que no hay nuevos casos. Usando este principio, podemos usar la letalidad del COVID-19 en China (4.2%) y Corea del Sur (1.1%) para darnos una idea de lo que podemos esperar. La diferencia de 3% es el efecto entre la eficiencia de las medidas de mitigación. <strong>Quédate en Casa</strong>.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <section class="section rad-animation-group pb-0" id="letalidad_mexico">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/letalidad_mexico.png"
+              data-srcset="https://coronamex.github.io/imagenes/letalidad_mexico.png 1x, https://coronamex.github.io/imagenes/letalidad_mexico@2x.png 2x"
+              alt="Letalidad por COVID-19 en México a lo largo del tiempo. Se muestran estimadores de la letalide instantánea y con un retraso de nueve días."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Letalidad en México</h3>
+            <p class="lead">
+              <p>La letalidad es <a href="../muertes#letalidad">difícil de interpretar</a>. En México podemos calcularla como el número de fallecimientos por cada cien casos (letalidad instantánea), o el número de fallecimientos por cada cien casos <a href="../clinicos#tiempo_muerte">nueve días antes</a> (letalidad con retraso).</p> <p>La gráfica muestra que estos dos estimadores dan resultados diferentes, lo que indica que ninguno de los dos es confiable en este momento, y por lo tanto no sabemos la letalidad verdadera del COVID-19 en México.</p>
             </p>
               
           </div>
