--- a/secciones/estados/index.html
+++ b/secciones/estados/index.html
@@ -336,6 +336,29 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="estados_muertes_recientes">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/estados_muertes_recientes.png"
+              data-srcset="https://coronamex.github.io/imagenes/estados_muertes_recientes.png 1x, https://coronamex.github.io/imagenes/estados_muertes_recientes@2x.png 2x"
+              alt="Número de fallecimientos por entidad en los últimos 10 días. Sólo se muestran estados con al menos un fallecimiento confirmado por COVID-19 en este período."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Muertes recientes</h3>
+            <p class="lead">
+              <p>Los fallecimientos por COVID-19 son el principal costo de esta epidemia, pero no afectan a todos los estados por igual. Esta gráfica muestra el número de fallecimientos por entidad (<a href="../../municipios#top_muertes_recientes_municipios">municipios</a>) en los últimos 10 días. Sólo se muestran estados con al menos un fallecimiento confirmado por COVID-19 en este período.</p> <p>Esta gráfica usa la fecha de fallecimiento de una persona para asignarla a una fecha. La mayoría de las visualizaciones en otros sitios utilizan la fecha en que se contabilizó el fallecimiento en las estadísticas de COVID-19. La fecha de fallecimiento nos da una idea más precisa de como se comporta una epidemia. Por otro lado, es posible que algunos fallecimientos en los últimos días no hayan sido contabilizados todavía.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="inicio_comunitarios">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
