--- a/etiquetas/estados/index.html
+++ b/etiquetas/estados/index.html
@@ -336,6 +336,29 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="r_efectiva">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/r_efectiva.png"
+              data-srcset="https://coronamex.github.io/imagenes/r_efectiva.png 1x, https://coronamex.github.io/imagenes/r_efectiva@2x.png 2x"
+              alt="R efectiva a través del tiempo en estados con al menos 500 casos. Mediana e intervalo modal (Highest Density Posterior [HDP]) estimados via MCMC."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>No se ha detenido la epidemia</h3>
+            <p class="lead">
+              <p>Las epidemias avanzan porque la enfermedad se transmite de una persona a otra. La R efectiva (R_t) es el número promedio de gente contagiada por cada persona que se enferma. Si la R efectiva es más de uno la epidemia sigue creciendo, mientras que si la R efectiva es menos de uno la epidemia se acaba.</p> <p>Esta gráfica muestra como la R efectiva se ha comportado en los estados con al menos 500 casos confirmados. La línea más gruesa muestra el mejor estimado (mediana) y el área sombreada representa el rango más probable de valores (intervalo modal).</p> <p>De acuerdo a esta métrica, Baja California ha sido el estado más exitoso en mitigar la epidemia. En otras entidades la R efectiva no ha disminuido tan claramente. NOTA: Los estimados de la Ciudad de México muestran mucha mas variación de lo esperado y podría tratarse de un problema técnico.</p> <p>Este análisis se toma de <a href="https://rt.live/" target="_blank">rt.live</a> que calcula R_t para EEUU. El código para producir estimar R_t en México está <a href="https://github.com/coronamex/visualizando/blob/master/estados/rt.live.ipynb" target="_blank">aquí</a> y los estimados <a href="https://raw.githubusercontent.com/coronamex/visualizando/master/estimados/rt_live_estimados.csv" target="_blank"> aquí</a>.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="estados_muertes_recientes">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
