--- a/etiquetas/serie_tiempo/index.html
+++ b/etiquetas/serie_tiempo/index.html
@@ -313,6 +313,29 @@
   </section>
 
   
+    <section class="section rad-animation-group pb-0" id="estados_100mil">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/casos_100mil_estados.png"
+              data-srcset="https://coronamex.github.io/imagenes/casos_100mil_estados.png 1x, https://coronamex.github.io/imagenes/casos_100mil_estados@2x.png 2x"
+              alt=""
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Situación en los estados</h3>
+            <p class="lead">
+              <p>Los lugares con más población siempre tienen más casos y por lo tanto el número total de casos no refleja la fase de la epidemia. En cambio, la cantidad de casos normalizada por población es un mejor indicador de qué tanto ha penetrado la epidemia en una región. Además, los casos normalmente se registran días después de que los pacientes muestran síntomas.</p> <p>Esta gráfica muestra el número de casos que mostraron síntomas por cada 100 mil habitantes (proyección de la CONAPO para 2020) en los 10 últimos días en las 32 entidades federativas del país.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="top_muertes_recientes_municipios">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
