--- a/etiquetas/modelo/index.html
+++ b/etiquetas/modelo/index.html
@@ -24,7 +24,7 @@
 
 
 <title>CoronaMex</title>
-<meta name="description" content="Datos y Análsisi sobre el COVID-19 en México">
+<meta name="description" content="Datos y Análsis sobre el COVID-19 en México">
 <meta charset="UTF-8">
 <meta name="author" content="Sur Herrera Paredes">
 <meta name="keywords" content="COVID-19,COVID19,COVID,coronavirus,mexico,datos abiertos,pandemia,epidemia,open data,pandemic,epidemic,datos libres,epidemiologia">
@@ -352,7 +352,7 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>No se ha detenido la epidemia</h3>
             <p class="lead">
-              <p>Las epidemias avanzan porque la enfermedad se transmite de una persona a otra. La R efectiva (R_t) es el número promedio de gente contagiada por cada persona que se enferma. Si la R efectiva es más de uno la epidemia sigue creciendo, mientras que si la R efectiva es menos de uno la epidemia se acaba.</p> <p>Esta gráfica muestra como la R efectiva se ha comportado en los estados con al menos 500 casos confirmados. La línea más gruesa muestra el mejor estimado (mediana) y el área sombreada representa el rango más probable de valores (intervalo modal).</p> <p>De acuerdo a esta métrica, Baja California ha sido el estado más exitoso en mitigar la epidemia. En otras entidades la R efectiva no ha disminuido tan claramente. NOTA: Los estimados de la Ciudad de México muestran mucha mas variación de lo esperado y podría tratarse de un problema técnico.</p> <p>Este análisis se toma de <a href="https://rt.live/" target="_blank">rt.live</a> que calcula R_t para EEUU. El código para producir estimar R_t en México está <a href="https://github.com/coronamex/visualizando/blob/master/estados/rt.live.ipynb" target="_blank">aquí</a> y los estimados <a href="https://raw.githubusercontent.com/coronamex/visualizando/master/estimados/rt_live_estimados.csv" target="_blank"> aquí</a>.</p>
+              <p>Las epidemias avanzan porque la enfermedad se transmite de una persona a otra. La R efectiva (R_t) es el número promedio de gente contagiada por cada persona que se enferma. Si la R efectiva es más de uno los casos aumentan, mientras que si la R efectiva es menos de uno los casos nuevos disminuyen.</p> <p>Esta gráfica muestra como la R efectiva se ha comportado en los estados con al menos 500 casos confirmados. La línea más gruesa muestra el mejor estimado (mediana) y el área sombreada representa el rango más probable de valores (intervalo modal).</p> <p>De acuerdo a esta métrica, Baja California y la Ciudad de México han sido los más exitosos en mitigar la epidemia. En otras entidades la R efectiva no ha disminuido lo suficiente.</p> <p>Este análisis se toma de <a href="https://rt.live/" target="_blank">rt.live</a> que calcula R_t para EEUU. El código para producir estimar R_t en México está <a href="https://github.com/coronamex/visualizando/blob/master/estados/rt.live.ipynb" target="_blank">aquí</a> y los estimados <a href="https://raw.githubusercontent.com/coronamex/visualizando/master/estimados/rt_live_estimados.csv" target="_blank"> aquí</a>.</p>
             </p>
               
           </div>
