--- a/secciones/clinicos/index.html
+++ b/secciones/clinicos/index.html
@@ -24,7 +24,7 @@
 
 
 <title>CoronaMex</title>
-<meta name="description" content="Datos y Análsisi sobre el COVID-19 en México">
+<meta name="description" content="Datos y Análsis sobre el COVID-19 en México">
 <meta charset="UTF-8">
 <meta name="author" content="Sur Herrera Paredes">
 <meta name="keywords" content="COVID-19,COVID19,COVID,coronavirus,mexico,datos abiertos,pandemia,epidemia,open data,pandemic,epidemic,datos libres,epidemiologia">
