Añadiendo zonas metropolitanas

--- a/etiquetas/index.html
+++ b/etiquetas/index.html
@@ -819,6 +819,29 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io"
+              data-srcset="https://coronamex.github.io 1x, https://coronamex.github.io 2x"
+              alt=""
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>zona_metropolitana</h3>
+            <p class="lead">
+              
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
 
 
   
