--- a/etiquetas/casos/index.html
+++ b/etiquetas/casos/index.html
@@ -326,9 +326,11 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La curva no se está aplanando</h3>
+            <h3>La epidemia sigue creciendo en México</h3>
             <p class="lead">
-              <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia porque nos permite estimar cuantos nuevos casos habrá en los próximos días.</p> <p>Esta gráfica muestra el crecimiento diario en el número de casos (promediado en los 7 días anteriores), dado el número total de casos reportados hasta un momento determinado. Una línea horizontal indicaría un crecimiento exponencial.</p> <p>La gráfica muestra que después de semanas de crecimiento sub-exponencial, la epidemia en <span style="background-color: #cab2d6">México</span> se está acelerando. Por eso es importante <strong>Quedarse en Casa Ya</strong>.</p>
+              <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia porque nos permite estimar que tan cerca o lejos estamos del pico epidémico.</p>
+<p>Esta gráfica muestra el crecimiento porcentual diario en el número de casos (promediado en los 7 días anteriores), dado el número total de casos reportados hasta un momento determinado. Una línea horizontal indicaría un crecimiento exponencial.</p>
+<p>Aunque México nunca llegó a un crecimiento tan acelerado como en otros países, la gráfica muestra que la velocidad de crecimiento tampoco ha disminuido tanto como en otros países. Esto significa que aunque la curva se ha aplanado, todavía no logramos detener el crecimiento de la epidemia. Por eso es importante <strong>Quedarse en Casa Ya</strong>.</p>
             </p>
               
           </div>
@@ -374,7 +376,9 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>Casos confirmados en México</h3>
             <p class="lead">
-              <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p> <p>Debido a que pueden pasar hasta dos semanas para que las personas infectadas muestren síntomas, no tenemos el número real de nuevas infecciones en los últimos días.</p> <p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="../../casos#sir">estimar</a> el número de casos en la actualidad y el <a href="../../casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
+              <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p>
+<p>Debido a que pueden hay un retraso entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que detectamos hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
+<p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="../../casos#sir">estimar</a> el número de casos en la actualidad y el <a href="../../casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
             </p>
               
           </div>
