--- a/etiquetas/serie_tiempo/index.html
+++ b/etiquetas/serie_tiempo/index.html
@@ -313,6 +313,31 @@
   </section>
 
   
+    <section class="section rad-animation-group pb-0" id="nacional_sintomas">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.png"
+              data-srcset="https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional.png 1x, https://coronamex.github.io/imagenes/inicio_sintomas_por_fecha_nacional@2x.png 2x"
+              alt="Número de casos de COVID-19 en México que empezaron a mostrar síntomas en cada fecha desde el inicio de la epidemia. Debido a que los contagiados pueden tardar hasta 15 días en mostrar síntomas parece que hay menos nuevos casos en días recientes pero estos números probablemente aumentarán en los próxios días."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Casos confirmados en México</h3>
+            <p class="lead">
+              <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p>
+<p>Debido a que pueden hay un retraso entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que detectamos hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
+<p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="../../casos#sir">estimar</a> el número de casos en la actualidad y el <a href="../../casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="vm_casos">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
