--- a/casos/nacional_sintomas/index.html
+++ b/casos/nacional_sintomas/index.html
@@ -321,7 +321,9 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>Casos confirmados en México</h2>
           <p class="lead">
-            <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p> <p>Debido a que pueden pasar hasta dos semanas para que las personas infectadas muestren síntomas, no tenemos el número real de nuevas infecciones en los últimos días.</p> <p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="../../casos#sir">estimar</a> el número de casos en la actualidad y el <a href="../../casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
+            <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p>
+<p>Debido a que pueden hay un retraso entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que detectamos hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
+<p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="../../casos#sir">estimar</a> el número de casos en la actualidad y el <a href="../../casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
           </p>
             
         </div>
