--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>¿Quién está en riesgo?</h3>
             <p class="lead">
-              <p><strong>Todos estamos en riesgo</strong>. Para el 15 de abril, 98 de las 449 (21%) personas que han fallecido en México por COVID-19 no tenían ninguno de los factores de riesgo reportados. Sin embargo ciertos factores pueden hacer más probable que un paciente de COVID-19 tenga una enfermedad grave, o termine falleciendo.</p> <p>En México, podemos calcular el riesgo relativo de que pacientes con COVID-19 tengan que ser hospitalizados, llevados a la unidad de cuidados intensivos o que fallezcan por COVID-19. Diabetes, enfermedad pulmonar obstructiva crónica (EPOC), insuficiencia renal crónica e hipertensión más o menos duplican el riesgo para los pacientes. El asma no tiene una asociación significativa con el riesgo, lo cual puede parecer raro pero hasta el momento <a href="https://www.aaaai.org/conditions-and-treatments/library/asthma-library/covid-asthma" target="_blank">no hay</a> <a href="https://time.com/5802423/coronvirus-asthma-high-risk/" target="_blank">evidencia</a> de que gente con asma tenga un mayor riesgo que los demás. Simplemente <strong>todos debemos extremar precauciones</strong>.</p>
+              <p><strong>Todos estamos en riesgo</strong>. Para el 15 de abril, 98 de las 449 (21%) personas que han fallecido en México por COVID-19 no tenían ninguno de los factores de riesgo reportados. Sin embargo ciertos factores pueden hacer más probable que un paciente de COVID-19 tenga una enfermedad grave.</p> <p>En México, podemos calcular el riesgo relativo de que pacientes con COVID-19 tengan que ser hospitalizados, llevados a la unidad de cuidados intensivos o que fallezcan por COVID-19. Diabetes, enfermedad pulmonar obstructiva crónica (EPOC), insuficiencia renal crónica e hipertensión más o menos duplican el riesgo para los pacientes. El asma no tiene una asociación significativa con el riesgo, lo cual puede parecer raro pero hasta el momento <a href="https://www.aaaai.org/conditions-and-treatments/library/asthma-library/covid-asthma" target="_blank">no hay</a> <a href="https://time.com/5802423/coronvirus-asthma-high-risk/" target="_blank">evidencia</a> de que gente con asma tenga un mayor riesgo que los demás. Simplemente <strong>todos debemos extremar precauciones</strong>.</p>
             </p>
               
           </div>
@@ -383,7 +383,9 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>Casos confirmados en México</h3>
             <p class="lead">
-              <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p> <p>Debido a que pueden pasar hasta dos semanas para que las personas infectadas muestren síntomas, no tenemos el número real de nuevas infecciones en los últimos días.</p> <p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="./casos#sir">estimar</a> el número de casos en la actualidad y el <a href="./casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
+              <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p>
+<p>Debido a que pueden hay un retraso entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que detectamos hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
+<p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="./casos#sir">estimar</a> el número de casos en la actualidad y el <a href="./casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
             </p>
               
           </div>
