--- a/mundo/index.html
+++ b/mundo/index.html
@@ -326,9 +326,11 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>La curva no se está aplanando</h3>
+            <h3>La epidemia sigue creciendo en México</h3>
             <p class="lead">
-              <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia porque nos permite estimar cuantos nuevos casos habrá en los próximos días.</p> <p>Esta gráfica muestra el crecimiento diario en el número de casos (promediado en los 7 días anteriores), dado el número total de casos reportados hasta un momento determinado. Una línea horizontal indicaría un crecimiento exponencial.</p> <p>La gráfica muestra que después de semanas de crecimiento sub-exponencial, la epidemia en <span style="background-color: #cab2d6">México</span> se está acelerando. Por eso es importante <strong>Quedarse en Casa Ya</strong>.</p>
+              <p>La velocidad con la que incrementan los casos es uno de los indicadores más importantes del estado de una epidemia porque nos permite estimar que tan cerca o lejos estamos del pico epidémico.</p>
+<p>Esta gráfica muestra el crecimiento porcentual diario en el número de casos (promediado en los 7 días anteriores), dado el número total de casos reportados hasta un momento determinado. Una línea horizontal indicaría un crecimiento exponencial.</p>
+<p>Aunque México nunca llegó a un crecimiento tan acelerado como en otros países, la gráfica muestra que la velocidad de crecimiento tampoco ha disminuido tanto como en otros países. Esto significa que aunque la curva se ha aplanado, todavía no logramos detener el crecimiento de la epidemia. Por eso es importante <strong>Quedarse en Casa Ya</strong>.</p>
             </p>
               
           </div>
