--- a/secciones/index.html
+++ b/secciones/index.html
@@ -349,7 +349,7 @@
             />
           </div>
           <div class="col-12 col-md-6 my-auto my-auto">
-            <h3>clinicos</h3>
+            <h3>clínicos</h3>
             <p class="lead">
               
             </p>
