--- a/clinicos/index.html
+++ b/clinicos/index.html
@@ -337,6 +337,30 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="tiempo_deteccion">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/tiempo_deteccion.png"
+              data-srcset="https://coronamex.github.io/imagenes/tiempo_deteccion.png 1x, https://coronamex.github.io/imagenes/tiempo_deteccion@2x.png 2x"
+              alt="Arriba, esta imagen muestra las curvas de casos confirmados de COVID-19 acumulados nacionales de acuerdo a cuando iniciaron los síntomas, cuando los pacientes ingresaron a una unidad médica, y cundo el caso fue confirmado. Abajo, se muestra la probabilidad de que un casos sea detectado un número de días después del inicio de síntomas. También se muestran las distribuciones de probabilidad de tiempo de que un paciente llegue a una unidad médica, y de que el caso sea confirmado una vez que el paciente llegó a ala unidad médica"
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>¿Cuánto tarda en confirmarse un caso?</h3>
+            <p class="lead">
+              <p>La gente que se enferma de COVID-19 no llega a una unidad médica de manera inmediata, y cuando llegan a una unidad médica, la prueba diagnóstica todavía puede tardar. La parte de arriba de la gráfica muestra que en México un caso tarda típicamente 10 días desde el inicio de síntomas hasta ser confirmado, y la mayoría de los casos se confirman en menos de dos semanas. También podemos ver que más o menos la mitad del tiempo se debe al retraso entre el inicio de síntomas y el registro de un paciente en la unidad médica, y la otra mitad es la demora de la prueba.</p>
+<p>Estos números se estiman comparando las curvas de casos acumulados de acuerdo a la fecha de inicio de síntomas, la fecha de registro de los casos en una unidad médica, y el numero de caso confirmados por fecha. Estas curvas se muestran en la parte de abajo de la gráfica y el desplazamiento de las mismas hacia la derecha nos indica el retraso.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="tiempo_muerte">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
