--- a/secciones/principal/index.html
+++ b/secciones/principal/index.html
@@ -424,7 +424,7 @@
             <h3>Casos confirmados en México</h3>
             <p class="lead">
               <p>Esta gráfica muestra el número de casos en México de acuerdo a la fecha en que empezaron a mostrar síntomas.</p>
-<p>Debido a que pueden hay un retraso entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que detectamos hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
+<p>Debido a que hay un <a href="../../clinicos#tiempo_deteccion">retraso típico de 10 días</a> entre el tiempo que una persona contagiada de COVID-19 muestra síntomas y su caso es confirmado, los casos que se reportan hoy corresponden a contagios ocurridos días atrás (hasta dos semanas). Por lo tanto, no tenemos el número real de infecciones en los días más recientes.</p>
 <p>Sin embargo, podemos utilizar los casos que mostraron síntomas hasta hace 15 días para <a href="../../casos#sir">estimar</a> el número de casos en la actualidad y el <a href="../../casos#sir_centinela">sistema Centinela</a> para estimar el número de casos reales.</p>
             </p>
               
@@ -450,7 +450,7 @@
             <p class="lead">
               <p>El número real de casos de COVID-19 es un parámetro esencial para determinar el riesgo de contagio de cada persona. El sistema Centinela es similar a una encuesta y permite estimar el número de casos reales aún sin diagnosticar a todos los contagiados. Desafortunadamente, sólo tenemos estimados oficiales hasta <a href="https://youtu.be/c-_kVkBFipw?t=3052" target="_blank"> la semana epidemiológica 15 (10 de abril)</a>. Como la epidemia sigue creciendo, el número de casos actual debe ser mayor.</p>
 <p>La Secretaría de Salud (SSA) no publica todos los elementos necesarios para reproducir sus estimados, así que hago algunas simplificaciones y llego a un resultado similar. Esto nos permite producir estimados en fechas más recientes.</p>
-<p>Finalmente, podemos combinar los números del sistema Centinela con un <a href="../../casos#sir">modelo SEIR</a> para corregir por el retraso en la detección de casos y estimar el número de real casos el día de hoy. Como los números de la SSA son más antiguos, las proyecciones basados en estos números son menos confiables. Todos los valores en esta gráfica se calculan <a href="https://github.com/coronamex/visualizando/blob/master/casos/centinela_preliminar.r" target="_blank">con este código</a>, y los valores numéricos se pueden <a href="https://raw.githubusercontent.com/coronamex/visualizando/master/estimados/centinela_seir_estimados.csv" target="blank">descargar</a>.</p>
+<p>Finalmente, podemos combinar los números del sistema Centinela con un <a href="../../casos#sir">modelo SEIR</a> para corregir por el <a href="../../clinicos#tiempo_deteccion">retraso</a> en la detección de casos y estimar el número de real casos el día de hoy. Como los números de la SSA son más antiguos, las proyecciones basados en estos números son menos confiables. Todos los valores en esta gráfica se calculan <a href="https://github.com/coronamex/visualizando/blob/master/casos/centinela_preliminar.r" target="_blank">con este código</a>, y los valores numéricos se pueden <a href="https://raw.githubusercontent.com/coronamex/visualizando/master/estimados/centinela_seir_estimados.csv" target="blank">descargar</a>.</p>
 <p>Esta gráfica se actualiza unas horas después que el resto del sitio.</p>
             </p>
               
