--- a/etiquetas/serie_tiempo/index.html
+++ b/etiquetas/serie_tiempo/index.html
@@ -363,6 +363,30 @@
       </div>
     </section>
   
+    <section class="section rad-animation-group pb-0" id="aplanamiento">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/aplanamiento.png"
+              data-srcset="https://coronamex.github.io/imagenes/aplanamiento.png 1x, https://coronamex.github.io/imagenes/aplanamiento@2x.png 2x"
+              alt="Pronósitcos de modelo SEIR ajustado en fecha más reciente con velocidades de días previos."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>Probablemente sí hemos aplanado la curva</h3>
+            <p class="lead">
+              <p>Aplanar la curva significa reducir la velocidad con la que aparecen nuevos casos. Nunca podemos estar cien por ciento seguros de qué hubiera pasado si las cosas fueran diferentes, pero podemos usar un <a href="../../casos#sir">modelo epidemiológico</a> para simular cuantos casos habría si hubieran seguido creciendo a la misma velocidad que hace algún tiempo.</p>
+<p>Esta gráfica muestra lo que varios modelos pronostican que hubiera pasado (líneas punteadas), y lo que los mismos modelos estiman está pasando ahora (líneas sólidas) con el número de casos confirmados. Los modelos difieren porque hacen diferente supuestos sobre el comportamiento de la enfermedad y porque se ajustan al crecimiento en diferentes fechas. A pesar de eso, la mayoría de los modelos coinciden en que los casos se están acumulando más lentamente de lo que esperábamos hace semanas, pero hay algunas excepciones. Por lo tanto, lo más probable es que se haya aplanado la curva, pero es mucho más difícil determinar el efecto neto de las medidas de mitigación.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section class="section rad-animation-group pb-0" id="vm_casos">
       <div class="container rad-fade-down">
         <div class="row d-flex flex-column-reverse flex-md-row">
