Añadir aplanado diagrama

--- a/etiquetas/estimado/index.html
+++ b/etiquetas/estimado/index.html
@@ -427,8 +427,32 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>Probablemente sí hemos aplanado la curva</h3>
             <p class="lead">
-              <p>Aplanar la curva significa reducir la velocidad con la que aparecen nuevos casos. Nunca podemos estar cien por ciento seguros de qué hubiera pasado si las cosas fueran diferentes, pero podemos usar un <a href="../../casos#sir">modelo epidemiológico</a> para simular cuantos casos habría si hubieran seguido creciendo a la misma velocidad que hace algún tiempo.</p>
+              <p><a href="../../casos#aplanamiento_diagrama">Aplanar la curva</a> significa reducir la velocidad con la que se acumulan los casos. Nunca podemos estar cien por ciento seguros de qué hubiera pasado si las cosas fueran diferentes, pero podemos usar un <a href="../../casos#sir">modelo epidemiológico</a> para simular cuantos casos habría si hubieran seguido creciendo a la misma velocidad que hace algún tiempo.</p>
 <p>Esta gráfica muestra lo que varios modelos pronostican que hubiera pasado (líneas punteadas), y lo que los mismos modelos estiman está pasando ahora (líneas sólidas) con el número de casos confirmados. Los modelos difieren porque hacen diferente supuestos sobre el comportamiento de la enfermedad y porque se ajustan al crecimiento en diferentes fechas. A pesar de eso, la mayoría de los modelos coinciden en que los casos se están acumulando más lentamente de lo que esperábamos hace semanas, pero hay algunas excepciones. Por lo tanto, lo más probable es que se haya aplanado la curva, pero es mucho más difícil determinar el efecto neto de las medidas de mitigación.</p>
+            </p>
+              
+          </div>
+        </div>
+      </div>
+    </section>
+  
+    <section class="section rad-animation-group pb-0" id="aplanamiento_diagrama">
+      <div class="container rad-fade-down">
+        <div class="row d-flex flex-column-reverse flex-md-row">
+          <div class="about__profile-picture col-12 col-md-6">
+            <img
+              class="lozad img-responsive image-right-overflow"
+              src="data:image/gif;base64,R0lGODlhBwACAIAAAP///wAAACH5BAEAAAEALAAAAAAHAAIAAAIDjI9YADs="
+              data-src="https://coronamex.github.io/imagenes/aplanamiento_diagrama.png"
+              data-srcset="https://coronamex.github.io/imagenes/aplanamiento_diagrama.png 1x, https://coronamex.github.io/imagenes/aplanamiento_diagrama@2x.png 2x"
+              alt="Simulación SEIRD comparando curvas epidémicas y log-log de casos y muertes con y sin aplanado."
+            />
+          </div>
+          <div class="col-12 col-md-6 my-auto my-auto">
+            <h3>¿Qué es el &#34;aplanado&#34; de la curva?</h3>
+            <p class="lead">
+              <p>Una error bastante común es la confusión entre aplanamiento de la curva y pasar el punto más alto de contagios. "Aplanar" la curva simplemente significa reducir la velocidad de contagio de manera que los casos se acumulan más lentamente de lo que se esperaría sin ninguna acción de mitigación. Aún cuando se tiene éxito "aplanando" la curva, le epidemia sigue teniendo una fase exponencial.</p>
+<p>Una de las visualizaciones más populares consiste en comparar casos o muertes por día y totales en escala logarítmica (log-log). En varios países se observa que esta curva ha empezado a descender y en México esto no ha sucedido. Como se ve en la simulación el comportamiento y la tendencia de una epidemia es en estas gráficas es idéntica independientemente del "aplanamiento". Lo que estas curvas log-log identifican es el pico epidémico. Hay <a href="../../casos#aplanamiento">mejores formas</a> de medir el aplanamiento en México.</p>
             </p>
               
           </div>
