--- a/secciones/casos/index.html
+++ b/secciones/casos/index.html
@@ -476,7 +476,7 @@
           <div class="col-12 col-md-6 my-auto my-auto">
             <h3>La epidemia crece en el Valle de México</h3>
             <p class="lead">
-              <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando cerca de la mitad de los casos confirmados. Esta gráfica muestra como el número de casos nuevos no ha dejado de aumentar.</p>
+              <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando cerca de la mitad de los casos confirmados. Esta gráfica muestra como el número de casos nuevos no ha dejado de aumentar aunque podría ser que el número de nuevos casos no esté creciendo tan rápidamente.</p>
 <p>Debido a que los casos nuevos se detectan con un <a href="../../clinicos#tiempo_deteccion">retraso típico de 10 días</a>, es posible que el número de casos que mostraron síntomas en las últimas dos semanas aumente.</p>
 <p>Otras <a href="../../municipios#top_zm_casos">zonas metropolitanas</a> también han sido afectadas</p>
             </p>
@@ -503,7 +503,7 @@
             <p class="lead">
               <p>Debido a su densidad poblacional y conexiones internas, las <a href="https://www.inegi.org.mx/app/biblioteca/ficha.html?upc=702825006792" target="_blank">zonas metropolitanas</a> son las regiones donde el COVID-19 puede avanzar con mayor facilidad, y cada una de estas regiones tiene una epidemia con características propias.</p>
 <p>Esta gráfica muestra el número de casos que mostraron síntomas en cada fecha para las nueve zonas metropolitanas más afectadas de México (excluyendo al <a href="../../municipios#vm_casos">Valle de México</a>).</p>
-<p>Cada zona metropolitana ha seguido su propia trayectoria. En Baja California, tanto Mexicali como Tijuana parecen haber superado el punto más crítico (consistente con la <a href="../../estados#r_efectiva">R efectiva</a>). En Culiacán el número de nuevos casos parece estabilizarse sin descender. Monterrey y Puebla han mostrado rebrotes importantes, mientras que Cancún, Mérida, Veracruz y Villahermosa siguen en fase de crecimiento.</p>
+<p>Cada zona metropolitana ha seguido su propia trayectoria. En ninguna zona metropolitana se ha superado con claridad el pico epidémico, aunque en algunas como Cancún, Culiacán, Mexicali, Tijuana y Villahermosa parece que los casos nuevos no están creciendo con tanta rapidez en días más recientes. En otras como Mérida, Monterrey, Puebla-Tlaxcala y Veracruz la aparición de casos nuevos sigue claramente acelerándose.</p>
             </p>
               
           </div>
