--- a/municipios/vm_casos/index.html
+++ b/municipios/vm_casos/index.html
@@ -321,7 +321,7 @@
         <div class="col-12 col-md-6 my-auto my-auto">
           <h2>La epidemia crece en el Valle de México</h2>
           <p class="lead">
-            <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando cerca de la mitad de los casos confirmados. Esta gráfica muestra como el número de casos nuevos no ha dejado de aumentar.</p>
+            <p>La zona metropolitana del Valle de México ha sido por mucho la región más afectada del país, acumulando cerca de la mitad de los casos confirmados. Esta gráfica muestra como el número de casos nuevos no ha dejado de aumentar aunque podría ser que el número de nuevos casos no esté creciendo tan rápidamente.</p>
 <p>Debido a que los casos nuevos se detectan con un <a href="../../clinicos#tiempo_deteccion">retraso típico de 10 días</a>, es posible que el número de casos que mostraron síntomas en las últimas dos semanas aumente.</p>
 <p>Otras <a href="../../municipios#top_zm_casos">zonas metropolitanas</a> también han sido afectadas</p>
           </p>
